Add API-Resource for Service Worker with 1m cache lifetime

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,5 +1,14 @@
 {
   "index": "/index.html",
+  "dataGroups": [{
+    "name": "api-cache",
+    "urls": ["https://www.pathofexile.com/api/**"],
+    "cacheConfig": {
+      "strategy": "performance",
+      "maxSize": 100,
+      "maxAge": "1m"
+    }
+  }],
   "assetGroups": [
     {
       "name": "app",
